--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Hello</title>
 </head>
-<nav><a href="hobby.html" title="My Hobbys"></a></nav>
+<nav><a href="hobby.html" title="My Hobbies"></a></nav>
 <body>
 <h1>Hello World</h1>
 </body>
