--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
+
 <head>
-<title>Hello</title>
+  <title>Hello</title>
 </head>
-<nav><a href="hobby.html" title="My Hobbies"></a></nav>
+
+<nav>
+  <a href="hobby.html">My Hobbies</a>
+  <a href="gallery.html">Gallery</a>
+</nav>
+
 <body>
-<h1>Hello World</h1>
+  <h1>Hello World</h1>
 </body>
+
 </html>
