--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Hello</title>
+  <title>Josh Rupprecht</title>
 </head>
 
 <nav>
@@ -11,6 +11,7 @@
 
 <body>
   <h1>Hello World</h1>
+<section><img src=</section>
 </body>
 
 </html>
