--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>Hello World</h1>
-<section><img src="https://www.dropbox.com/s/fs3esmcwhoqk6z1/10285538_10203641853790739_7784849560789197025_o.jpg"></section>
+<section><img src="http://interactivepython.org/runestone/static/webfundamentals/_images/norse-logo.png"></section>
 </body>
 
 </html>
