--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>Hello World</h1>
-<section><img src="http://interactivepython.org/runestone/static/webfundamentals/_images/norse-logo.png"></section>
+<aside><img src="http://interactivepython.org/runestone/static/webfundamentals/_images/norse-logo.png"></aside>
 </body>
 
 </html>
