--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </nav>
 
 <body>
-  <h1>Hello World</h1>
-  <section>hello</section>
+  <h1>About Me</h1>
+  <section>Hello, my name is Josh Rupprecht. I'm from Rochester Minnesota and am currently enrolled
+  at Luther College. I'm a CS major and this is my first website! Join with me in its evolution.</section>
   <aside><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=200></aside>
 </body>
 
