--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <section>Hello, my name is Josh Rupprecht. I'm from Rochester, Minnesota and am currently enrolled
   at Luther College. I'm a CS major and this is my first website. Join in with me in its evolution!</section>
   <aside><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=200></aside>
+  
+  <article>
+    <h3>Assignments</h3>
+    Assignments for my CS 130 class can be found at these links.
+    <ul>
+      <a href="http://interactivepython.org/runestone/static/cs130Fall15/index.html">Here</a>
+    </ul>
+  </article>
 </body>
 
 </html>
