--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h3>Assignments</h3>
     Assignments for my CS 130 class can be found at these links.
     <ul>
-      <a href="http://interactivepython.org/runestone/static/cs130Fall15/index.html">Here</a>
+      <li><a href="http://interactivepython.org/runestone/static/cs130Fall15/index.html">Here</a></li>
     </ul>
   </article>
 </body>
