--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,17 @@
+<table width=100% border=1 cellspacing=1>
+  <tr>
+    <td>img</td>
+    <td>img</td>
+  </tr>
+  
+  <tr>
+    <td>img</td>  
+    <td>img</td>
+  </tr>
+  
+  <tr>
+    <td>img</td>
+    <td>img</td>
+  </tr>
 
+</table>
