--- a/gallery.html
+++ b/gallery.html
@@ -5,13 +5,13 @@
   </tr>
   
   <tr>
-    <td>img</td>  
-    <td>img</td>
+    <td align=center width=50%><img src=https://scontent-ord1-1.xx.fbcdn.net/hphotos-xtp1/v/t1.0-9/11866398_953781114687795_4897801191802206203_n.jpg?oh=6a81309104b48f3e569560dd4f9e3df4&oe=56A80C02 height=400></td>  
+    <td align=center width=50%><img src=https://scontent-ord1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/10599457_837731576261798_5920594257333397951_n.jpg?oh=545baa8834386ad572d4f4c90e81af86&oe=56736676 height=400></td>
   </tr>
   
   <tr>
-    <td>img</td>
-    <td>img</td>
+    <td align=center width=50%><img src=https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/1510036_10202793552900111_1245049485_n.jpg?oh=71ec88b9e71c23ce47e94fe1f02e2373&oe=566C4110 height=400></td>
+    <td align=center width=50%><img src=https://scontent-ord1-1.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/10385276_1001189499905477_1574329216011371121_n.jpg?oh=bef4485e08f74d5d399dbf8a00de4665&oe=5673E55D height=400></td>
   </tr>
 
 </table>
