--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,11 @@
 <html>
   <head>
-    
+    <style>
+      h1 {
+         color: blue;
+         font-size: 28pt;
+      }
+      </style>
   </head>
 <body>
   <h1>Gallery</h1>
