--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,9 @@
          font-size: 28pt;
       }
       </style>
+      body {
+          background-color: #d0e4fe;
+      }
   </head>
 <body>
   <h1>Gallery</h1>
