--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
+  <style>
+    h1 {
+       color: blue;
+       text-align: center;
+    }
+    body {
+         background-color: #d0e4fe;
+    }
+  </style>
 
 <head>
   <title>Josh Rupprecht</title>
@@ -13,7 +22,7 @@
   <h1>About Me</h1>
   <section>Hello, my name is Josh Rupprecht. I'm from Rochester, Minnesota and am currently enrolled
   at Luther College. I'm a CS major and this is my first website. Join in with me in its evolution!</section>
-  <aside><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=200></aside>
+  <aside><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=600></aside>
   
   <article>
     <h3>Assignments</h3>
