--- a/hobby.html
+++ b/hobby.html
@@ -1,1 +1,24 @@
-
+<html>
+  <head>
+    <title>My Hobbies</title>
+    <style>
+      h1 {
+         color: blue;
+         text-align: center;
+      }
+      body {
+           background-color: #d0e4fe;
+      }
+    </style>
+  </head>
+  
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="gallery.html">Gallery</a>
+  </nav>
+  
+  <body>
+    <h1>My Hobbies</h1>
+    
+  </body>
+</html>
