--- a/hobby.html
+++ b/hobby.html
@@ -18,7 +18,17 @@
   </nav>
   
   <body>
+    <section>
     <h1>My Hobbies</h1>
-    
+    I like to a few things that I suppose I would call hobbies. Here are a few.
+    <ol>
+      <li>Watch movies</li>
+      <li>Work out</li>
+      <li>Play video games</li>
+      <li>Make money</li>
+      <li>Read books</li>
+      <li>Do things with friends</li>
+    </ol>
+    </section>
   </body>
 </html>
