--- a/hobby.html
+++ b/hobby.html
@@ -30,5 +30,15 @@
       <li>Do things with friends</li>
     </ol>
     </section>
+    <aside>
+      <h3>Movies List</h3>
+      My roommates and I are watching movies together this year, rating each one as we finish it. We have started a list in the room, but I'll keep one here too.
+
+      <ul>
+        <li>In Time - 6.5</li>
+        <li>A Fistful of Dollars 8.5</li>
+        <li>Lucky Number Sleven 7.5</li>
+      </ul>
+    </aside>
   </body>
 </html>
