--- a/hobby.html
+++ b/hobby.html
@@ -36,8 +36,9 @@
 
       <ul>
         <li>In Time - 6.5</li>
-        <li>A Fistful of Dollars 8.5</li>
-        <li>Lucky Number Sleven 7.5</li>
+        <li>A Fistful of Dollars - 8.5</li>
+        <li>Lucky Number Sleven - 7.5</li>
+        <li>The Green Mile - 7</li>
       </ul>
     </aside>
   </body>
