--- a/to_do.html
+++ b/to_do.html
@@ -1,1 +1,29 @@
+<html>
+   <head>
+      <style>
+      .high {
+        color: red;
+      }
+      .medium {
+         color: orange;
+      }
+      .low {
+         color: gray;
+      }
+      .done {
+         text-decoration: line-through;
+      }
+      </style>
+   </head>
+   
+   <nav>
+     <a href="index.html">Home</a>
+     <a href="hobby.html">My Hobbies</a>
+     <a href="gallery.html">Gallery</a>
+   </nav>
 
+   <body>
+     <ul>
+       <li class="medium">Register vehicle on campus.</li>
+     </ul>
+   </body>
