--- a/to_do.html
+++ b/to_do.html
@@ -23,7 +23,36 @@
    </nav>
 
    <body>
+     <table width='100%' border=1px cellspacing=0>
+       <caption>Key</caption>
+       <tr>
+         <td>Attribute</th>
+         <th>Priority</th>
+       </tr>
+       <tr>
+         <td>Red Text</td>
+         <td>High Priority</td>
+       </tr>
+       <tr>
+         <td>Orange Text</td>
+         <td>Medium Priority</td>
+       </tr>
+       <tr>
+         <td>Gray Text</td>
+         <td>Low Priority</td>
+       </tr>
+       <tr>
+         <td>Strikethough</td>
+         <td>Done</td>
+       </tr>
+     </table>
+
      <ul>
        <li class="medium">Register vehicle on campus.</li>
+       <li class="high">Get in good shape.</li>
+       <li class="low">Watch Gone Girl.</li>
+       <li class="medium">Finish the Dollars Trilogy.</li>
+       <li class="done">Create this list.</li>
+       
      </ul>
    </body>
