--- a/to_do.html
+++ b/to_do.html
@@ -13,7 +13,16 @@
       .done {
          text-decoration: line-through;
       }
+      h1 {
+         color: blue;
+         text-align: center;
+      }
+      body {
+           background-color: #d0e4fe;
+      }
       </style>
+      
+      <title>To Do</title>
    </head>
    
    <nav>
@@ -23,6 +32,7 @@
    </nav>
 
    <body>
+     <h1>To Do</h1>   
      <ul>
        <li class="medium">Register vehicle on campus.</li>
        <li class="high">Get in good shape.</li>
