--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="hobby.html">My Hobbies</a>
+    <a href="to_do.html">To Do List</a>
   </nav>
   
   <body>
