--- a/hobby.html
+++ b/hobby.html
@@ -15,6 +15,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="gallery.html">Gallery</a>
+    <a href="to_do.html">To Do List</a>
   </nav>
   
   <body>
