--- a/to_do.html
+++ b/to_do.html
@@ -33,7 +33,7 @@
 
    <body>
      <h1>To Do</h1>   
-     <ul>
+     <ul align="centered">
        <li class="medium">Register vehicle on campus.</li>
        <li class="high">Get in good shape.</li>
        <li class="low">Watch Gone Girl.</li>
@@ -42,7 +42,7 @@
        
      </ul>
      
-      <table width='25%' border=1px cellspacing=0>
+      <table width='25%' border=1px cellspacing=0 align="centered">
       <caption>Key</caption>
        <tr>
          <td>Attribute</th>
