--- a/to_do.html
+++ b/to_do.html
@@ -45,7 +45,7 @@
       <table width='25%' border=1px cellspacing=0 align="centered">
       <caption>Key</caption>
        <tr>
-         <td>Attribute</th>
+         <th>Attribute</th>
          <th>Priority</th>
        </tr>
        <tr>
