--- a/to_do.html
+++ b/to_do.html
@@ -42,7 +42,7 @@
        
      </ul>
      
-      <table width='25%' border=1px cellspacing=0 align="centered">
+      <table width='25%' border=1px cellspacing=0 align="center">
       <caption>Key</caption>
        <tr>
          <th>Attribute</th>
