--- a/to_do.html
+++ b/to_do.html
@@ -33,7 +33,7 @@
 
    <body>
      <h1>To Do</h1>   
-     <ul align="centered">
+     <ul align="center">
        <li class="medium">Register vehicle on campus.</li>
        <li class="high">Get in good shape.</li>
        <li class="low">Watch Gone Girl.</li>
