--- a/to_do.html
+++ b/to_do.html
@@ -20,6 +20,10 @@
       body {
            background-color: #d0e4fe;
       }
+      ul { 
+         display:table; 
+         margin:0 auto;
+      }
       </style>
       
       <title>To Do</title>
@@ -33,7 +37,7 @@
 
    <body>
      <h1>To Do</h1>   
-     <ul align="center">
+     <ul>
        <li class="medium">Register vehicle on campus.</li>
        <li class="high">Get in good shape.</li>
        <li class="low">Watch Gone Girl.</li>
