--- a/to_do.html
+++ b/to_do.html
@@ -1,32 +1,7 @@
 <html>
    <head>
-      <style>
-      .high {
-        color: red;
-      }
-      .medium {
-         color: orange;
-      }
-      .low {
-         color: gray;
-      }
-      .done {
-         text-decoration: line-through;
-      }
-      h1 {
-         color: blue;
-         text-align: center;
-      }
-      body {
-           background-color: #d0e4fe;
-      }
-      ul { 
-         display:table; 
-         margin:0 auto;
-      }
-      </style>
-      
       <title>To Do</title>
+      <link rel=stylesheet href=to_do.css type=text/css />
    </head>
    
    <nav>
