--- a/to_do.html
+++ b/to_do.html
@@ -21,6 +21,7 @@
        
      </ul>
      <br />
+     <aside>
       <table width='25%' border=1px cellspacing=0 align="center">
       <caption>Key</caption>
        <tr>
@@ -43,5 +44,6 @@
          <td>Strikethough</td>
          <td>Done</td>
        </tr>
-     </table>  
+     </table>
+     </aside>
    </body>
