--- a/to_do.html
+++ b/to_do.html
@@ -11,6 +11,7 @@
    </nav>
 
    <body>
+     <section>   
      <h1>To Do</h1>   
      <ul>
        <li class="medium">Register vehicle on campus.</li>
@@ -21,6 +22,7 @@
        
      </ul>
      <br />
+     </section>
      <aside>
       <table width='25%' border=1px cellspacing=0 align="center">
       <caption>Key</caption>
