--- a/to_do.html
+++ b/to_do.html
@@ -24,7 +24,7 @@
      <br />
      </section>
      <aside>
-      <table width='25%' border=1px cellspacing=0>
+      <table width='25%' border=1px cellspacing=0 align="center">
       <caption>Key</caption>
        <tr>
          <th>Attribute</th>
