--- a/to_do_2.html
+++ b/to_do_2.html
@@ -1,1 +1,20 @@
-
+<html>
+  <head>
+    <name>To Do 2</name>
+    <link rel=stylesheet href=to_do_2.css type=text/css />
+  </head>
+  
+  <nav>
+     <a href="index.html">Home</a>
+     <a href="hobby.html">My Hobbies</a>
+     <a href="gallery.html">Gallery</a>
+     <a href="to_do.html">To Do 1</a>
+   </nav>
+  
+  <body>
+    <section class="high">
+      <h1>High Priority</h1>
+    </section>
+    
+  </body>
+</html>
