--- a/to_do_2.html
+++ b/to_do_2.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <name>To Do 2</name>
+    <title>To Do 2</title>
     <link rel=stylesheet href=to_do_2.css type=text/css />
   </head>
   
