--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="hobby.html">My Hobbies</a>
   <a href="gallery.html">Gallery</a>
   <a href="to_do.html">To Do List</a>
+  <a href="to_do_2.html">To Do 2</a>
 </nav>
 
 <body>
