--- a/to_do_2.html
+++ b/to_do_2.html
@@ -37,7 +37,7 @@
     </section>
     
     <section class="done">
-      <h1 style="text-decoration:none">Finished</h1>
+      <h1 style="text-decoration:none;">Finished</h1>
       <ul>
         <li>Finish this assignment.</li>
       </ul>
