--- a/index.html
+++ b/index.html
@@ -12,26 +12,36 @@
   <title>Josh Rupprecht</title>
 </head>
 
-<nav>
-  <a href="hobby.html">My Hobbies</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="to_do.html">To Do List</a>
-  <a href="to_do_2.html">To Do 2</a>
+<nav class="nav">
+  <ul>
+    <li><a href="hobby.html">My Hobbies</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="to_do.html">To Do List</a></li>
+    <li></li><a href="to_do_2.html">To Do 2</a></li>
+  </ul>
 </nav>
 
+
 <body>
-  <h1>About Me</h1>
-  <section align=center>Hello, my name is Josh Rupprecht. I'm from Rochester, Minnesota and am currently enrolled
-  at Luther College. I'm a CS major and this is my first website. Join in with me in its evolution!</section>
-  <aside align=center><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=600></aside>
+  <section class="left">
+    <h1>About Me</h1>
+    Hello, my name is Josh Rupprecht. I'm from Rochester, Minnesota and am currently enrolled
+  at Luther College. I'm a CS major and this is my first website. Join in with me in its evolution!
+    <img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=600>
+  </section>
   
-  <article>
+  <section class="right">
     <h3>Assignments</h3>
     Assignments for my CS 130 class can be found at these links.
     <ul>
       <li><a href="http://interactivepython.org/runestone/static/cs130Fall15/index.html">Here</a></li>
     </ul>
   </article>
+
 </body>
+
+<footer>
+  Page created by Josh Rupprecht
+</footer>
 
 </html>
