--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <html>
 <head>
-  <style>
-    h1 {
-       color: blue;
-       text-align: center;
-    }
-    body {
-         background-color: #d0e4fe;
-    }
-  </style>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <title>Josh Rupprecht</title>
 </head>
+<header>Josh Rupprecht</header>
 
 <nav class="nav">
   <ul>
