--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <li><a href="hobby.html">My Hobbies</a></li>
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="to_do.html">To Do List</a></li>
-    <li></li><a href="to_do_2.html">To Do 2</a></li>
+    <li><a href="to_do_2.html">To Do 2</a></li>
   </ul>
 </nav>
 
