--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <link rel="stylesheet" href="good.css" type="text/css">
   <title>Josh Rupprecht</title>
 </head>
-
-<nav class="nav">
+<div class="nav">
+<nav>
   <ul>
     <li><a href="hobby.html">My Hobbies</a></li>
     <li><a href="gallery.html">Gallery</a></li>
@@ -12,6 +12,7 @@
     <li><a href="to_do_2.html">To Do 2</a></li>
   </ul>
 </nav>
+</div>
 
 <header>Josh Rupprecht</header>
 
