--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" href="good.css" type="text/css">
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <title>Josh Rupprecht</title>
 </head>
 <div class="nav">
