--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <h1>About Me</h1>
     Hello, my name is Josh Rupprecht. I'm from Rochester, Minnesota and am currently enrolled
   at Luther College. I'm a CS major and this is my first website. Join in with me in its evolution!
-    <div id=img><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" size=50%
-</div>
+    <div id=img><img src="https://scontent-ord1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10171721_10203641853790739_7784849560789197025_n.jpg?oh=729fbc005b37476f27a0453bd77a07fa&oe=566B4DAD" width=480px height=320px></div>
   </section>
   
   <section class="right">
