--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <ul>
       <li><a href="http://interactivepython.org/runestone/static/cs130Fall15/index.html">Here</a></li>
     </ul>
-  </article>
+  </section>
 
   <footer>
     <p>Page created by Josh Rupprecht</p>
