--- a/to_do_3.html
+++ b/to_do_3.html
@@ -1,1 +1,35 @@
-
+<html>
+  <head>
+    <title>To Do 2</title>
+    <link rel=stylesheet href=to_do_2.css type=text/css />
+  </head>
+  
+  <nav>
+     <a href="index.html">Home</a>
+     <a href="hobby.html">My Hobbies</a>
+     <a href="gallery.html">Gallery</a>
+     <a href="to_do.html">To Do 1</a>
+   </nav>
+  
+  <body>
+  
+    <section class="high">
+      <h1>High Priority</h1>
+        <input type="checkbox" name="group1" value="Get in shape">Get in shape<br />
+        <input type="checkbox" name="group1" value="Update resume">Update resume<br />
+    </section>
+    
+    <section class="medium">
+      <h1>Medium Priority</h1>
+        <input type="checkbox" name="group1" value="Send a letter to my grandparents">Send a letter to my grandparents<br />
+        <input type="checkbox" name="group1" value="Finish the Dollars trilogy">Finish the Dollars trilogy<br />
+    </section>
+    
+    <section class="low">
+      <h1>Low Priority</h1>
+      <input type="checkbox" name="group1" value="Find some new music">Find some new music<br />
+      <input type="checkbox" name="group1" value="Finish a book">Finish a book<br />
+    </section>
+  
+  </body>
+</html>
