--- a/to_do_3.html
+++ b/to_do_3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>To Do 2</title>
+    <title>To Do 3</title>
     <link rel=stylesheet href=to_do_2.css type=text/css />
   </head>
   
@@ -9,6 +9,8 @@
      <a href="hobby.html">My Hobbies</a>
      <a href="gallery.html">Gallery</a>
      <a href="to_do.html">To Do 1</a>
+     <a href="to_do_2.html">To Do 2</a>
+   
    </nav>
   
   <body>
