--- a/final_todo.html
+++ b/final_todo.html
@@ -23,8 +23,7 @@
     <br /br>
     
     <section> 
-      <p>Enter Task<p> 
-      <input id="task" type="text" value="" size="80">
+      <p>Enter Task<p> <input id="task" type="text" value="" size="80">
         <select id="priority">
           <option>High</option>
           <option>Medium</option>
