--- a/final_todo.html
+++ b/final_todo.html
@@ -22,7 +22,7 @@
     <br /br>
     <br /br>
     
-    <section> 
+    <section id="input"> 
       <p>Enter Task<p> <input id="task" type="text" value="" size="80">
         <select id="priority">
           <option>High</option>
