--- a/final_todo.html
+++ b/final_todo.html
@@ -23,7 +23,8 @@
     <br /br>
     
     <section id="input"> 
-      <p>Enter Task<p> <input id="task" type="text" value="" size="60">
+      <label for "task">Enter Task</label> 
+      <input id="task" type="text" value="" size="60">
         <select id="priority">
           <option>High</option>
           <option>Medium</option>
