--- a/final_todo.html
+++ b/final_todo.html
@@ -2,6 +2,7 @@
   <head>
     <title>Final To Do</title>
     <link rel=stylesheet href=to_do_2.css type=text/css />
+    <script type=text/javascript src=todo.js></script>
   </head>
   
   <nav>
@@ -32,6 +33,5 @@
         </select>
       <button onclick="addTask();">New</button>
     </section>
-
   </body>
 </html>
