--- a/final_todo.html
+++ b/final_todo.html
@@ -16,7 +16,9 @@
    
   <body>
     <h1 id="title">Busy Busy</h1>
-    <section id="list">
+    <section id="listbox">
+      <ul id="list">
+      </ul>
       
     </section>
     
