--- a/final_todo.html
+++ b/final_todo.html
@@ -2,6 +2,7 @@
   <head>
     <title>Final To Do</title>
     <link rel=stylesheet href=to_do_2.css type=text/css />
+    <link rel=stylesheet href=priority.css type=text/css />
     <script type=text/javascript src=to_do.js></script>
   </head>
   
