--- a/final_todo.html
+++ b/final_todo.html
@@ -3,6 +3,7 @@
     <title>Final To Do</title>
     <link rel=stylesheet href=priority.css type=text/css />
     <script type=text/javascript src=to_do.js></script>
+    <script type =text/javascript src="http://bnmnetp.github.io/CS130/listsaver.js"
   </head>
   
   <nav>
