--- a/final_todo.html
+++ b/final_todo.html
@@ -37,4 +37,11 @@
       <button onclick="addTask();">New</button>
     </section>
   </body>
+    <script type="text/javascript">
+      localSave("list")
+    </script>
+    
+    <script type="text/javascript">
+      window.onload = function() { restoreList("list", Clickme) }
+    </script>
 </html>
