--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="to_do.html">To Do List</a></li>
     <li><a href="to_do_2.html">To Do 2</a></li>
+    <li><a href="to_do_3.html">To Do 3</a></li>
+    <li><a href="final_todo.html">Final To Do</a></li>
   </ul>
 </nav>
 </div>
